--- a/css/style.css
+++ b/css/style.css
@@ -260,3 +260,31 @@ footer .icon {
   display: inline-block;
   margin-right: 1em;
 }
+
+
+/*Discovery
+======================================================*/
+
+.discovery p, .process p {
+  text-align: left;
+  margin: 0 auto;
+  width: 90%;
+  margin-bottom: 2em;
+}
+
+.charts {
+  margin: 0 auto;
+}
+
+.charts img {
+  width: 95%;
+  margin-bottom: 2em;
+}
+
+
+@media only screen and (min-width: 768px) {
+
+.charts {
+  margin: 1em .5em;
+}
+}
